# pyDynamicTau

./: .gitignore  LICENSE  README.md  cMakeLists.txt
include/: bayes.hpp  env.hpp  matplotlibcpp.h  proc.hpp
include/beamsplitter/: ReplayBuffer.hpp  Util.hpp  actorBeamsplitter.hpp
include/beamsplitter/environment/: EnvironmentBeamsplitter.hpp  LatticeBeamsplitter.hpp
include/dynamicTau/: ReplayBuffer.hpp  Util.hpp  actorDynTau.hpp  classicDynTau.hpp  decs.hpp  env.hpp
include/dynamicTau/classic/: classicDynTau.hpp  classicEnv.hpp  scanRunner.hpp
include/dynamicTau/environment/: bayes.hpp  classicEnv.hpp  environmentDynTau.hpp  proc.hpp
include/helper/: helperUtil.hpp
include/learner/reinforcement_learner/: actor.hpp  environment.hpp  learnerUtil.hpp  reinforcementLearner.hpp
include/learner/reinforcement_learner/support/: Cacher.hpp
include/learner/reinforcement_learner/support/episode_runner/: EpisodeResult.hpp  EpisodeRunner.hpp
include/learner/reinforcement_learner/support/trial_runner/: TrialResult.hpp  TrialRunner.hpp
murrayEx/: Environment.hpp  Lattice.hpp  beamsplitter.cpp
py/: comp.py  param.dqn  param.tgt
pySrc/: main.py  test.py
rl_include/: Actor.hpp  Network.hpp  Util.hpp
src/: bayes.cpp  env.cpp  proc.cpp  spectrum.cpp  wrapper.cpp
src/beamsplitter/: CMakeLists.txt  beamsplitter.cpp
src/dynamicTau/: CMakeLists.txt  bayes.cpp  comp.cpp  manual.cpp  parameters.txt  proc.cpp  spectrum.cpp  training.cpp
src/dynamicTau/comps/: CMakeLists.txt  comp.cpp  scanRunner.cpp
